# alpha-scout

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  LICENSE-CONTENT  NOTICE  README.md  pyproject.toml
config/: arxiv-cross-sectional.env  github-research.env  kaggle-optiver.env  reddit-algotrading.env  twitter-alpha-hunters.env  twitter-scan.env
content/data/: alpha-index.jsonl
content/data/json/: 20251024-arxiv-cross-sectional-gpt-5-pro.json  20251024-kaggle-optiver-deep-dive-gpt-5-pro.json
content/prompt-requests/: 20251024-arxiv-cross-sectional.md  20251024-github-quant-research.md  20251024-kaggle-optiver-deep-dive.md  20251024-reddit-quant-alphas.md  20251024-twitter-alpha-hunters.md  20251024-twitter-order-flow.md  20251025-arxiv-cross-sectional.md  20251025-github-quant-research.md  20251025-kaggle-optiver-deep-dive.md  20251025-reddit-quant-alphas.md  20251025-twitter-alpha-hunters.md  20251025-twitter-order-flow.md
content/prompts/: alpha-discovery-report.md
content/reports/: 20251024-arxiv-cross-sectional-gpt-5-pro.md  20251024-github-quant-research-gpt-5-pro.md  20251024-kaggle-optiver-deep-dive-gpt-5-pro.md  20251024-reddit-quant-alphas-gpt-5-pro.md  20251024-twitter-alpha-hunters-gpt-5-pro.md  20251024-twitter-order-flow-gpt-5-pro.md  20251024-twitter-order-flow.md
data/json/: 20251024-github-quant-research-gpt-5-pro.json  20251024-reddit-quant-alphas-gpt-5-pro.json  20251024-twitter-alpha-hunters-gpt-5-pro.json  20251024-twitter-order-flow-gpt-5-pro.json
scripts/: generate_prompt.sh
src/alpha_scout/: __init__.py
(+5 files in other folders)
